Change Slow Receive message to reference -XX:+UseG1GC instead of deprecated UseConcMarkSweepGC. Also added a note to consider applying DISK-QUEUE to limit memory demands.